Enhance multipart upload handling with conflict checks and session management improvements